Favicon and title

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,6 +1,6 @@
 {
   "seo": {
-    "title": "Full Stack Developer",
+    "title": "Dalvae",
     "description": "Full Stack Developer from San Pedro de Atacama. Specialist in React, Nuxt and modern architectures."
   },
   "role": "Full Stack Developer",
