--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -1,6 +1,6 @@
 {
   "seo": {
-    "title": "Desarrollador Full Stack",
+    "title": "Dalvae",
     "description": "Desarrollador Full Stack de San Pedro de Atacama. Especialista en React, Nuxt y arquitecturas modernas."
   },
   "role": "Desarrollador Full Stack",
