Add project mockups with iPhone/Safari frames and improve UI
- Add iPhone 15 Pro and Safari browser mockup components
- Create ProjectCard and ProjectMockups components for better project display
- Add StackSection component for tech stack visualization
- Update projects data with screenshots (desktop/mobile)
- Hide scrollbar globally for cleaner mockup appearance
- Simplify index page layout with new components

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -16,6 +16,8 @@
     "bio": "Bio"
   },
   "view_all_projects": "View Full Project Archive",
+  "view_code": "View Code",
+  "private": "Private",
   "stack_categories": {
     "frontend": "Frontend",
     "backend": "Backend",
@@ -48,8 +50,7 @@
   },
   "availability": {
     "title": "Availability",
-    "hours": "40 hrs/week",
-    "timezone": "GMT-4"
+    "hours": "40 hrs/week"
   },
   "footer": {
     "copyright": "© {year} Diego Alvarez. San Pedro de Atacama.",
